# sifnode

./: .codecov.yml  .deepsource.toml  .env.cicd  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  Changes.txt  Dockerfile  LICENSE  Makefile  Makefile.bak  Makefile.protofiles  Peggy-Debugging.md  README.md  Rakefile  SECURITY.md  START_SCREEN  TODO.md  betanetRecords-complete.json  betanetRecords.json  blacklist.json  buf.gen.yaml  buf.work.yaml  buf.yaml  bug1.md  burn-bug.md  codecov.yml  config.yml  cover.sh  demo.sh  docker-compose.yml  go.045.sum  go.mod  go.sum  go_045.mod  go_FEATURE_TOGGLE_SDK_045.mod  init.sh  input.json  mint-params.json  (+16 more)
.anchore/: anchore-policy.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: .gitleaks.toml  dependabot.yml  gitleaks.toml
.run/: ebrelayer.run.xml
api/: gqlgen.yml
app/: ante.go  app.go  app_045.go  app_FEATURE_TOGGLE_MARGIN_CLI_ALPHA.go  app_FEATURE_TOGGLE_SDK_045.go  app_NO_FEATURE_TOGGLE_MARGIN_CLI_ALPHA.go  app_NO_FEATURE_TOGGLE_SDK_045.go  app_test.go  denom_mapping_peggy1_to_peggy2.json  encoding.go  export.go  genesis.go  poolChange.go  prefix.go  prop29.go  release-20210501000000-AddDispensation.go  setupHandlers.go  setup_handlers.go  setup_handlers_test.go  test_helpers.go  tokenMigration.go  token_migration.json  tokenmigration_test.go  upgrade-poolChange.go  wasm_config.go
cmd/: gen_docs.go  generate_docs.go  run.go
common/: coin.go  coin_test.go
docs/wasm/demo/tutorial/my-contract/: Cargo.toml  Makefile  my_contract.wasm
docs/wasm/demo/tutorial/my-contract/src/: lib.rs
(+5660 files in other folders)
