[package]
name = "my-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8"
sif-std = { path = "../../sif_std/" }
